one_aig_individuals_emea.css
/* ... */
/*565px*/
@media screen and (max-width: 35.313em) {
#siteSearch {
    cursor: pointer;
    height: 0;
    left: 0;
    padding-top: 1.429em;
    position: absolute;
    top: 2.5em;
    width: 2.5em;
	display:block !important;
}
#siteSearch:before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 2.5em;
  border-top: .2em solid #666;
}
#siteSearch:after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 2.5em;
  height: .5em;
  border-top: .2em solid #666;
  border-bottom: .2em solid #666;
  margin-top: .7em;
}
#siteSearch form{
display:none;
}
.mobileMenu #siteSearch {
  margin-left: 10px;
}
#topMenu {
    right: 100%;
    width: 200px;
}
#navContainer {
  overflow: hidden;
  position: absolute;
  width: 200px;	
	top: 140px;
  display: none;
}	
  #navListPanel, #navListPanel ul {
    height: auto;
    padding-left: 0;
    position:static;
    height: 100%;
    background: #B0B0B0 !important;
  }

  #navListPanel li {
    float: none;
    width: 200px;
  }
  header{
    height: auto;
  }
  ul#navListPanel li a {
    padding: 11px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }

  #subNav3, #subNav4, #subNav5 {
    display: none !important;
  }

  #siteSearch, #topLinks {
    display: none;
  }

  header {
    padding-bottom: 1em;
  }

  #logo {
    width: 100%;
    text-align: center;
    margin: 0;
  }

  #logobanner2 {
    display: block;
    position: absolute;
    right: 0;
    top: 2.2em;
  }
  #logobanner2 img {
    max-width: 55px;
  }

  .hasBanner #gridTop {
    margin-top: 0;
  }

  #gridTop {
    height: 115px;
    background-color: #fff;
  }

  #pageBanner {
    top: 5px;
    height: 128px;
  }
  .utiNavSec {
    text-align: center;
  }
  ul.utiNavSec li {
    display: inline;
  }
  .utiNavSec li:first-child a {
    padding-left: 0;
    margin-left: 0;
  }
  ul.utiNavSec li a {
    float: none;
  }
  #rightTopMenu {
    position: static;
    text-align: center;
    padding-top: .5em;
    width: 100%;
  }
  #navBanner{
    overflow: hidden;
    width: 100%;
  }
  #body_wrapper{
	-webkit-transition: left ease .25s;
	-moz-transition: left ease .25s;
	-o-transition: left ease .25s;
	-ms-transition: left ease .25s;
	transition: left ease .25s;
	overflow: visible;
  }
  #body_wrapper.mobileMenu{
	left: 200px;
  }
  .mobileMenu #navContainer{
	left: -200px;
	top: 0;
  display: block;
  height: 100%;
  }
  ul#navListPanel li.tabOnActive a.navLink, #navListPanel a, ul#navListPanel li a.navLink:hover, ul#navListPanel li.selected a.navLink {
    background: #B0B0B0;
  }
}
/*545px*/
@media screen and (max-width: 34.063em) {
  #navBanner .bnrImg {
    width: 500px;
  }

  #navBanner {
    width: 100%;
    height: 348px;
  }

  .bnrDesc h1, .bnrDesc h2, .bnrDesc h1 .Custom_Bold {
    font-size: 2em;
  }

  #navBanner .bnrDesc {
    font-size: 16px !important;
  }

  #navBanner #thumbnail {
    top: 296px;
  }

  #navBanner .bannerSection {
    width: 100%;
  }

  .bnrDesc {
    margin: 0;
  }

  .bnrDesc br {
    display: none;
  }

  #pageBanner {
    height: auto;
  }

  #pageBanner .pageTitle {
    display: inline-block;
    position: static;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: .5em;
    text-align: center;
    width: 100%;
  }

  #pageBanner img {
    display: none;
  }

  #gridDetailNav .catNav {
    margin-top: 25px;
  }

  .catNav {
    background: #fff;
  }
  #gridDetailNav {
    padding-top: 0;
  }
}
/*400px*/
@media screen and (max-width: 25em) {
  #pageBanner img {
    width: 100%;
    float: none;
    display: block;
  }
}
/* mobile overlay css */
#bg {
    bottom: 0;
    display: none;
    height: 100%;
    left: 0;
    margin: 0;
    opacity: 0.4;
    overflow: visible;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 1000;
}

